--- a/Assets/docker-compose.yml
+++ b/Assets/docker-compose.yml
@@ -12,3 +12,5 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      - ./share:/var/share
+    network_mode: host
