--- a/RGamaFelix.TimeTracker.Infrastructure/RGamaFelix.TimeTracker.Infrastructure.csproj
+++ b/RGamaFelix.TimeTracker.Infrastructure/RGamaFelix.TimeTracker.Infrastructure.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <LangVersion>latestmajor</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.9.1"/>
-        <PackageReference Include="RGamaFelix.ServiceResponse" Version="1.0.2"/>
+        <PackageReference Include="MediatR" Version="12.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0"/>
     </ItemGroup>
-
 
 </Project>
