--- a/RGamaFelix.TimeTracker.Rest.Model/RGamaFelix.TimeTracker.Rest.Model.csproj
+++ b/RGamaFelix.TimeTracker.Rest.Model/RGamaFelix.TimeTracker.Rest.Model.csproj
@@ -8,17 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="11.9.1" />
+        <PackageReference Include="FluentValidation" Version="11.9.1"/>
         <PackageReference Include="MediatR" Version="12.2.0"/>
         <PackageReference Include="RGamaFelix.ServiceResponse" Version="1.0.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Infraestructure\" />
+        <Folder Include="Infraestructure\"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\RGamaFElix.TimeTracker.Infrastructure\RGamaFElix.TimeTracker.Infrastructure.csproj" />
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Infrastructure\RGamaFelix.TimeTracker.Infrastructure.csproj"/>
     </ItemGroup>
 
 
