Adjusting connection strings

--- a/RGamaFelix.TimeTracker.Rest.EntryPoint/appsettings.Development.json
+++ b/RGamaFelix.TimeTracker.Rest.EntryPoint/appsettings.Development.json
@@ -5,7 +5,8 @@
     }
   },
   "ConnectionStrings": {
-    "TimeTrackerDbConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=time-tracker;Pooling=true;"
+    "TimeTrackerPostgresDbConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=time-tracker;Pooling=true;",
+    "TimeTrackerSqLServerDbConnectionString": "Server=localhost;Initial Catalog=time-tracker;Encrypt=false;TrustServerCertificate=True;Persist Security Info=False;User ID=sa;Password=P@ss5678;MultipleActiveResultSets=False;Connection Timeout=30;"
   },
   "JwtConfiguration": {
     "Audience": "http://localhost:4200/",
