--- a/RGamaFelix.TimeTracker.Rest.EntryPoint/RGamaFelix.TimeTracker.Rest.EntryPoint.csproj
+++ b/RGamaFelix.TimeTracker.Rest.EntryPoint/RGamaFelix.TimeTracker.Rest.EntryPoint.csproj
@@ -7,6 +7,7 @@
         <InvariantGlobalization>true</InvariantGlobalization>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <LangVersion>latestmajor</LangVersion>
+        <InvariantGlobalization>false</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
