Correcting sigin behavior

--- a/RGamaFelix.TimeTracker.Rest.EntryPoint/appsettings.Development.json
+++ b/RGamaFelix.TimeTracker.Rest.EntryPoint/appsettings.Development.json
@@ -13,6 +13,6 @@
     "Issuer": "http://localhost:5000/",
     "AccessTokenExpirationMinutes": 5,
     "RefreshTokenExpirationDays": 30,
-    "SecretKey": "supersecret"
+    "SecretKey": "EB388068-C133-4F72-A831-EE61735861D0"
   }
 }
