--- a/RGamaFelix.TimeTracker.Rest.Api/RGamaFelix.TimeTracker.Rest.Api.csproj
+++ b/RGamaFelix.TimeTracker.Rest.Api/RGamaFelix.TimeTracker.Rest.Api.csproj
@@ -25,9 +25,9 @@
 
 
     <ItemGroup>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.ApplicationService\RGamaFelix.TimeTracker.ApplicationService.csproj"/>
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Application.Service\RGamaFelix.TimeTracker.Application.Service.csproj" />
         <ProjectReference Include="..\RGamaFelix.TimeTracker.Domain.Service\RGamaFelix.TimeTracker.Domain.Service.csproj"/>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Rest.Model\RGamaFelix.TimeTracker.Rest.Model.csproj"/>
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Request.Model\RGamaFelix.TimeTracker.Request.Model.csproj" />
     </ItemGroup>
 
 
