moving Application.Infraestructure to Request.Preprocessor

--- a/RGamaFelix.TimeTracker.Request.Model/RGamaFelix.TimeTracker.Request.Model.csproj
+++ b/RGamaFelix.TimeTracker.Request.Model/RGamaFelix.TimeTracker.Request.Model.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Application.Infrastructure\RGamaFelix.TimeTracker.Application.Infrastructure.csproj" />
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Request.Preprocessor\RGamaFelix.TimeTracker.Request.Preprocessor.csproj"/>
     </ItemGroup>
 
 
