Renaming the DbContext project and expanding the README.md

--- a/RGamaFelix.TimeTracker.Domain.Service/RGamaFelix.TimeTracker.Domain.Service.csproj
+++ b/RGamaFelix.TimeTracker.Domain.Service/RGamaFelix.TimeTracker.Domain.Service.csproj
@@ -8,10 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Application.Service\RGamaFelix.TimeTracker.Application.Service.csproj" />
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Application.Service\RGamaFelix.TimeTracker.Application.Service.csproj"/>
         <ProjectReference Include="..\RGamaFelix.TimeTracker.Domain.Model\RGamaFelix.TimeTracker.Domain.Model.csproj"/>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Repository\RGamaFelix.TimeTracker.Repository.csproj"/>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Request.Model\RGamaFelix.TimeTracker.Request.Model.csproj" />
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.DataContext\RGamaFelix.TimeTracker.DataContext.csproj"/>
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.Request.Model\RGamaFelix.TimeTracker.Request.Model.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
