--- a/RGamaFelix.TimeTracker.Repository.Adapter.InMemory/RGamaFelix.TimeTracker.Repository.Adapter.InMemory.csproj
+++ b/RGamaFelix.TimeTracker.Repository.Adapter.InMemory/RGamaFelix.TimeTracker.Repository.Adapter.InMemory.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Repository\RGamaFelix.TimeTracker.Repository.csproj"/>
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.DataContext\RGamaFelix.TimeTracker.DataContext.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
