--- a/RGamaFelix.TimeTracker.Repository.Adapter.PostgresSql/RGamaFelix.TimeTracker.Repository.Adapter.PostgresSql.csproj
+++ b/RGamaFelix.TimeTracker.Repository.Adapter.PostgresSql/RGamaFelix.TimeTracker.Repository.Adapter.PostgresSql.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\RGamaFelix.TimeTracker.Repository\RGamaFelix.TimeTracker.Repository.csproj"/>
+        <ProjectReference Include="..\RGamaFelix.TimeTracker.DataContext\RGamaFelix.TimeTracker.DataContext.csproj"/>
     </ItemGroup>
 
 </Project>
