--- a/Assets/docker-compose.yml
+++ b/Assets/docker-compose.yml
@@ -1,29 +1,34 @@
 version: "3.0"
-name: time-tracker
 services:
   db-postgres:
     image: postgres:12.1-alpine
-#   restart: always
+    container_name: time-tracker-postgres-db
+    #   restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
-    ports:
-      - "5432:5432"
+    # ports are not needed as we are using network_mode: host
+    #    ports:
+    #      - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      # Adding share volume in develop to facilitate sharing files between host and container
       - ./share:/var/share
     network_mode: host
 
   db-sql:
     image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: time-tracker-sql-db
     user: root
     environment:
       SA_PASSWORD: "P@ss5678"
       ACCEPT_EULA: "Y"
-    ports:
-        - "1433:1433"
+    # ports are not needed as we are using network_mode: host
+    #    ports:
+    #        - "1433:1433"
     volumes:
-        - ./mssql-data:/var/opt/mssql
-        - ./share:/var/share
+      - ./mssql-data:/var/opt/mssql
+      # Adding share volume in develop to facilitate sharing files between host and container
+      - ./share:/var/share
     network_mode: host
